[gd_scene load_steps=15 format=3 uid="uid://c0qaccwnlq6i4"]

[ext_resource type="FontFile" uid="uid://chuow3mkvw5sm" path="res://Assets/Fonts/Dongle-Regular.ttf" id="1_1dtu5"]
[ext_resource type="Script" path="res://Main_Game/tied_menu.gd" id="1_d2cx8"]
[ext_resource type="FontFile" uid="uid://bjm2ng4mj2k78" path="res://Assets/Fonts/Dongle-Bold.ttf" id="2_edr1v"]
[ext_resource type="Texture2D" uid="uid://ck6rmkm1ec05p" path="res://Assets/Pictures/winner_backdrop.png" id="3_78qj4"]
[ext_resource type="Texture2D" uid="uid://dh2yeas2jumon" path="res://Assets/Pictures/img1cat.png" id="4_mtba2"]
[ext_resource type="Texture2D" uid="uid://cu2ojj86a0ksl" path="res://Assets/Pictures/img4cat.png" id="5_n8rpx"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_tqgmq"]
bg_color = Color(0.705882, 0.682353, 0.560784, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0.560784, 0.462745, 0.372549, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
expand_margin_left = 30.0
expand_margin_right = 30.0

[sub_resource type="Theme" id="Theme_p8osj"]
Button/colors/font_color = Color(0.969928, 0.94584, 0.891714, 1)
Button/colors/font_outline_color = Color(0.678431, 0.556863, 0.435294, 1)
Button/constants/outline_size = 7
Button/font_sizes/font_size = 60
Button/fonts/font = ExtResource("1_1dtu5")
Button/styles/disabled = SubResource("StyleBoxFlat_tqgmq")
Button/styles/focus = SubResource("StyleBoxFlat_tqgmq")
Button/styles/hover = SubResource("StyleBoxFlat_tqgmq")
Button/styles/normal = SubResource("StyleBoxFlat_tqgmq")
Button/styles/pressed = SubResource("StyleBoxFlat_tqgmq")
Label/colors/font_color = Color(0.964706, 0.929412, 0.862745, 1)
Label/colors/font_outline_color = Color(0.462363, 0.315595, 0.222544, 1)
Label/constants/outline_size = 10
Label/font_sizes/font_size = 110
Label/fonts/font = ExtResource("2_edr1v")
Label/styles/normal = null

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_pp4ep"]
bg_color = Color(0.964706, 0.929412, 0.862745, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0.678431, 0.556863, 0.435294, 1)
corner_radius_top_left = 100
corner_radius_top_right = 100
corner_radius_bottom_right = 100
corner_radius_bottom_left = 100

[sub_resource type="Theme" id="Theme_6fgwx"]
Label/colors/font_color = Color(0.678431, 0.556863, 0.435294, 1)
Label/constants/outline_size = 0
Label/font_sizes/font_size = 45
Label/styles/normal = SubResource("StyleBoxFlat_pp4ep")

[sub_resource type="FontVariation" id="FontVariation_uhoa4"]
base_font = ExtResource("2_edr1v")
spacing_glyph = 2
spacing_top = -7
spacing_bottom = -11

[sub_resource type="FontVariation" id="FontVariation_yexag"]
base_font = ExtResource("1_1dtu5")
spacing_glyph = 1
spacing_bottom = -3

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2fhd1"]
bg_color = Color(0.819608, 0.690196, 0.537255, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0.560784, 0.462745, 0.372549, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
expand_margin_left = 30.0
expand_margin_right = 30.0

[sub_resource type="Theme" id="Theme_r4dn1"]
Button/styles/disabled = SubResource("StyleBoxFlat_2fhd1")
Button/styles/focus = SubResource("StyleBoxFlat_2fhd1")
Button/styles/hover = SubResource("StyleBoxFlat_2fhd1")
Button/styles/normal = SubResource("StyleBoxFlat_2fhd1")

[node name="tied_menu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_d2cx8")

[node name="ColorRect" type="ColorRect" parent="."]
light_mask = 7
z_index = 2
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.384314, 0.32549, 0.258824, 0.4)

[node name="Control" type="Control" parent="."]
z_index = 2
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -323.0
offset_top = -170.0
offset_right = 324.0
offset_bottom = 128.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_p8osj")

[node name="TextureRect" type="TextureRect" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -28.0
offset_top = 2.0
offset_right = 20.0
offset_bottom = 4.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_78qj4")
expand_mode = 3

[node name="Control" type="Control" parent="Control"]
custom_minimum_size = Vector2(2.08165e-12, -100)
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 0.5
offset_top = -14.0
offset_right = 0.5
offset_bottom = -14.0
grow_horizontal = 2

[node name="p1_cat" type="Sprite2D" parent="Control/Control"]
position = Vector2(-119, -4.5)
scale = Vector2(0.07, 0.07)
texture = ExtResource("4_mtba2")

[node name="p2_cat" type="Sprite2D" parent="Control/Control"]
position = Vector2(94, -1.49999)
scale = Vector2(0.07, 0.07)
texture = ExtResource("5_n8rpx")

[node name="RichTextLabel" type="Label" parent="Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -139.5
offset_top = -82.0
offset_right = 138.5
offset_bottom = -28.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_6fgwx")
theme_override_fonts/font = SubResource("FontVariation_uhoa4")
text = "Tied Game!"
horizontal_alignment = 1

[node name="PlayAgain" type="Button" parent="Control"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 69.0
offset_top = -148.0
offset_right = 267.0
offset_bottom = -58.0
grow_vertical = 0
theme_override_fonts/font = SubResource("FontVariation_yexag")
text = "Play Again"

[node name="MainMenu" type="Button" parent="Control"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -275.0
offset_top = -148.0
offset_right = -71.0
offset_bottom = -58.0
grow_horizontal = 0
grow_vertical = 0
theme = SubResource("Theme_r4dn1")
theme_override_fonts/font = SubResource("FontVariation_yexag")
text = "Main Menu"

[connection signal="mouse_entered" from="Control/PlayAgain" to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="Control/PlayAgain" to="." method="_on_main_menu_mouse_exited"]
[connection signal="pressed" from="Control/PlayAgain" to="." method="_on_play_again_pressed"]
[connection signal="mouse_entered" from="Control/MainMenu" to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="Control/MainMenu" to="." method="_on_main_menu_mouse_exited"]
[connection signal="pressed" from="Control/MainMenu" to="." method="_on_main_menu_pressed"]
